Added oven page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65722849-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-65722849-2');
+    </script>
 
 </head>
 
@@ -89,6 +98,17 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>clineranch.net and clinecollett.com</h2>
                 <p>These are personal, social and professional footprints on the web left behind by constant exploration.</p>
+                <h2>Projects</h2>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="oven.html" class="btn btn-default btn-lg"> <span class="network-name">Cob Oven Project</span></a>
+                    </li>
+                    <li>
+                        <a href="hard-apple-cider-basics.pdf" class="btn btn-default btn-lg"> <span class="network-name">Hard Cider Guide</span></a>
+                    </li>
+                    
+                    
+                </ul>
             </div>
         </div>
     </section>
@@ -126,7 +146,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p><img src="img/ubuntu.png">&nbsp;on&nbsp;&nbsp;<img src="img/do.png" height="42px"></p>
+            <p>hosted by <a href="https://surge.sh/" target="_blank">surge.sh</a></p>
         </div>
     </footer>
 
