--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <a href="oven.html" class="btn btn-default btn-lg"> <span class="network-name">Cob Oven Project</span></a>
                     </li>
                     <li>
-                        <a href="hard-apple-cider-basics.pdf" class="btn btn-default btn-lg"> <span class="network-name">Hard Cider Guide</span></a>
+                        <a href="https://drive.google.com/file/d/0ByNxe4mlPzOMdG1KQW13RjBLeVE/view?usp=sharing" class="btn btn-default btn-lg"> <span class="network-name">Hard Cider Guide</span></a>
                     </li>
                     
                     
