--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
         </div>
     </section>
 
-    <!-- Map Section -->
+    <!-- 
+    Map Section 
     <div id="map"></div>
+    -->
 
     <!-- Footer -->
     <footer>
