--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>hosted by <a href="https://surge.sh/" target="_blank">surge.sh</a></p>
+            <p>hosted by <a href="https://netlify.com" target="_blank">Netlify</a></p>
         </div>
     </footer>
 
@@ -160,10 +160,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
+    
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
 
