--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Clineranch/Clinecollett</title>
+    <title>Clineranch</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-motorcycle"></i>  <span class="light">Clineranch/Clinecollett</span>
+                    <i class="fa fa-motorcycle"></i>  <span class="light">Clineranch</span>
                 </a>
             </div>
 
@@ -148,7 +148,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>hosted by <a href="https://netlify.com" target="_blank">Netlify</a></p>
+            
         </div>
     </footer>
 
