--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>clineranch.net and clinecollett.com</h2>
+                <h2>clineranch.net</h2>
                 <p>These are personal, social and professional footprints on the web left behind by constant exploration.</p>
                 <h2>Projects</h2>
                 <ul class="list-inline banner-social-buttons">
