Add link to The Good Pair in index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 <h2>Projects</h2>
                 <ul class="list-inline banner-social-buttons">
                     <li>
+                        <a href="https://www.thegoodpair.co" class="btn btn-default btn-lg"> <span class="network-name">The Good Pair</span></a>
+                    </li>
+                    <li>
                         <a href="oven.html" class="btn btn-default btn-lg"> <span class="network-name">Cob Oven Project</span></a>
                     </li>
                     <li>
