Change 'Projects' heading to 'Recent Projects'

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>clineranch.net</h2>
                 <p>These are personal, social and professional footprints on the web left behind by constant exploration.</p>
-                <h2>Projects</h2>
+                <h2>Recent Projects</h2>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://www.thegoodpair.co" class="btn btn-default btn-lg"> <span class="network-name">The Good Pair</span></a>
